// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with long date without snippets 1`] = `
<div>
  <div
    className="modal-backdrop fade in"
  />
  <div
    aria-hidden="true"
    aria-labelledby="modalFollowupLabel"
    className="modal text-left fade in"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header modal-header-jumbo"
        >
          <button
            aria-label="Close"
            className="close close-inverse"
            onTouchTap={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <div
            className="followup-type-wrap"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-4"
              >
                <img
                  alt="Document title"
                  className="followup-document-image img-responsive offset-bottom-xs-max"
                  height={160}
                  src="http://www.example.com/image.jpg"
                  width={256}
                />
              </div>
              <div
                className="col-sm-7"
              >
                <h2
                  className="modal-title offset-bottom-small"
                  id="modalFollowupLabel"
                >
                  Document title
                </h2>
                <p
                  className="small"
                >
                  1 January 2017
                  <span
                    className="offset-left offset-right"
                  >
                    |
                  </span>
                  Author of document
                </p>
                <button
                  className="btn btn-default btn-default-alt btn-sm"
                  onTouchTap={[Function]}
                >
                  <span
                    className="glyphicon glyphicon-file icon-offset"
                  />
                  Download document
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with long date without snippets 2`] = `
<div>
  <div
    className="modal-backdrop fade in"
  />
  <div
    aria-hidden="true"
    aria-labelledby="modalFollowupLabel"
    className="modal text-left fade in"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header modal-header-jumbo"
        >
          <button
            aria-label="Close"
            className="close close-inverse"
            onTouchTap={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <div
            className="followup-type-wrap"
          >
            <div
              className="followup-type"
            >
              <span
                aria-hidden="true"
                className="followup-type-icon glyphicon glyphicon-heart"
              />
              <span
                className="followup-type-title"
              >
                typeSupporting
              </span>
            </div>
            <div
              className="row"
            >
              <div
                className="col-sm-4"
              >
                <img
                  alt="Document title"
                  className="followup-document-image img-responsive offset-bottom-xs-max"
                  height={160}
                  src="http://www.example.com/image.jpg"
                  width={256}
                />
              </div>
              <div
                className="col-sm-7"
              >
                <h2
                  className="modal-title offset-bottom-small"
                  id="modalFollowupLabel"
                >
                  Document title
                </h2>
                <p
                  className="small"
                >
                  1 January 2017
                  <span
                    className="offset-left offset-right"
                  >
                    |
                  </span>
                  Author of document
                </p>
                <button
                  className="btn btn-default btn-default-alt btn-sm"
                  onTouchTap={[Function]}
                >
                  <span
                    className="glyphicon glyphicon-file icon-offset"
                  />
                  Download document
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with long date without snippets 3`] = `
<div>
  <div
    className="modal-backdrop fade in"
  />
  <div
    aria-hidden="true"
    aria-labelledby="modalFollowupLabel"
    className="modal text-left fade in"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header modal-header-jumbo"
        >
          <button
            aria-label="Close"
            className="close close-inverse"
            onTouchTap={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <div
            className="followup-type-wrap"
          >
            <div
              className="followup-type"
            >
              <span
                aria-hidden="true"
                className="followup-type-icon glyphicon glyphicon-play"
              />
              <span
                className="followup-type-title"
              >
                typeAction
              </span>
            </div>
            <div
              className="row"
            >
              <div
                className="col-sm-4"
              >
                <img
                  alt="Document title"
                  className="followup-document-image img-responsive offset-bottom-xs-max"
                  height={160}
                  src="http://www.example.com/image.jpg"
                  width={256}
                />
              </div>
              <div
                className="col-sm-7"
              >
                <h2
                  className="modal-title offset-bottom-small"
                  id="modalFollowupLabel"
                >
                  Document title
                </h2>
                <p
                  className="small"
                >
                  1 January 2017
                  <span
                    className="offset-left offset-right"
                  >
                    |
                  </span>
                  Author of document
                </p>
                <button
                  className="btn btn-default btn-default-alt btn-sm"
                  onTouchTap={[Function]}
                >
                  <span
                    className="glyphicon glyphicon-file icon-offset"
                  />
                  Download document
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with long date without snippets 4`] = `
<div>
  <div
    className="modal-backdrop fade in"
  />
  <div
    aria-hidden="true"
    aria-labelledby="modalFollowupLabel"
    className="modal text-left fade in"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header modal-header-jumbo"
        >
          <button
            aria-label="Close"
            className="close close-inverse"
            onTouchTap={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <div
            className="followup-type-wrap"
          >
            <div
              className="followup-type"
            >
              <span
                aria-hidden="true"
                className="followup-type-icon glyphicon glyphicon-minus-sign"
              />
              <span
                className="followup-type-title"
              >
                typeRejected
              </span>
            </div>
            <div
              className="row"
            >
              <div
                className="col-sm-4"
              >
                <img
                  alt="Document title"
                  className="followup-document-image img-responsive offset-bottom-xs-max"
                  height={160}
                  src="http://www.example.com/image.jpg"
                  width={256}
                />
              </div>
              <div
                className="col-sm-7"
              >
                <h2
                  className="modal-title offset-bottom-small"
                  id="modalFollowupLabel"
                >
                  Document title
                </h2>
                <p
                  className="small"
                >
                  1 January 2017
                  <span
                    className="offset-left offset-right"
                  >
                    |
                  </span>
                  Author of document
                </p>
                <button
                  className="btn btn-default btn-default-alt btn-sm"
                  onTouchTap={[Function]}
                >
                  <span
                    className="glyphicon glyphicon-file icon-offset"
                  />
                  Download document
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with long date without snippets 5`] = `
<div>
  <div
    className="modal-backdrop fade in"
  />
  <div
    aria-hidden="true"
    aria-labelledby="modalFollowupLabel"
    className="modal text-left fade in"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header modal-header-jumbo"
        >
          <button
            aria-label="Close"
            className="close close-inverse"
            onTouchTap={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <div
            className="followup-type-wrap"
          >
            <div
              className="followup-type"
            >
              <span
                aria-hidden="true"
                className="followup-type-icon glyphicon glyphicon-lock"
              />
              <span
                className="followup-type-title"
              >
                typeEnd
              </span>
            </div>
            <div
              className="row"
            >
              <div
                className="col-sm-4"
              >
                <img
                  alt="Document title"
                  className="followup-document-image img-responsive offset-bottom-xs-max"
                  height={160}
                  src="http://www.example.com/image.jpg"
                  width={256}
                />
              </div>
              <div
                className="col-sm-7"
              >
                <h2
                  className="modal-title offset-bottom-small"
                  id="modalFollowupLabel"
                >
                  Document title
                </h2>
                <p
                  className="small"
                >
                  1 January 2017
                  <span
                    className="offset-left offset-right"
                  >
                    |
                  </span>
                  Author of document
                </p>
                <button
                  className="btn btn-default btn-default-alt btn-sm"
                  onTouchTap={[Function]}
                >
                  <span
                    className="glyphicon glyphicon-file icon-offset"
                  />
                  Download document
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with one snippet 1`] = `
<div>
  <div
    className="modal-backdrop fade in"
  />
  <div
    aria-hidden="true"
    aria-labelledby="modalFollowupLabel"
    className="modal text-left fade in"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header modal-header-jumbo"
        >
          <button
            aria-label="Close"
            className="close close-inverse"
            onTouchTap={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <div
            className="followup-type-wrap"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-4"
              >
                <img
                  alt="Document title"
                  className="followup-document-image img-responsive offset-bottom-xs-max"
                  height={160}
                  src="http://www.example.com/image.jpg"
                  width={256}
                />
              </div>
              <div
                className="col-sm-7"
              >
                <h2
                  className="modal-title offset-bottom-small"
                  id="modalFollowupLabel"
                >
                  Document title
                </h2>
                <p
                  className="small"
                >
                  1 January 2017
                  <span
                    className="offset-left offset-right"
                  >
                    |
                  </span>
                  Author of document
                </p>
                <button
                  className="btn btn-default btn-default-alt btn-sm"
                  onTouchTap={[Function]}
                >
                  <span
                    className="glyphicon glyphicon-file icon-offset"
                  />
                  Download document
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-body"
        >
          <div
            className="well well-simple well-simple-light"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Snippet",
                }
              }
            />
            <div
              className="offset-top-small offset-bottom-small"
            >
              <div
                className="row"
              >
                <div
                  className="col-sm-7 text-left"
                >
                  <div
                    className="offset-top-small"
                  >
                    <Reputation
                      dislikeAction={[Function]}
                      dislikeCount={0}
                      dislikeLabel="dislike"
                      likeAction={[Function]}
                      likeCount={0}
                      likeLabel="like"
                      voted={false}
                      votingLimitError="voting-error"
                    />
                  </div>
                </div>
                <div
                  className="col-sm-5 text-right"
                >
                  <div
                    className="offset-top-small"
                  >
                    <RaisedButton
                      disabled={false}
                      label="Follow path"
                      onTouchTap={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with short date without snippets 1`] = `
<div>
  <div
    className="modal-backdrop fade in"
  />
  <div
    aria-hidden="true"
    aria-labelledby="modalFollowupLabel"
    className="modal text-left fade in"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header modal-header-jumbo"
        >
          <button
            aria-label="Close"
            className="close close-inverse"
            onTouchTap={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <div
            className="followup-type-wrap"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-4"
              >
                <img
                  alt="Document title"
                  className="followup-document-image img-responsive offset-bottom-xs-max"
                  height={160}
                  src="http://www.example.com/image.jpg"
                  width={256}
                />
              </div>
              <div
                className="col-sm-7"
              >
                <h2
                  className="modal-title offset-bottom-small"
                  id="modalFollowupLabel"
                >
                  Document title
                </h2>
                <p
                  className="small"
                >
                  January 2017
                  <span
                    className="offset-left offset-right"
                  >
                    |
                  </span>
                  Author of document
                </p>
                <button
                  className="btn btn-default btn-default-alt btn-sm"
                  onTouchTap={[Function]}
                >
                  <span
                    className="glyphicon glyphicon-file icon-offset"
                  />
                  Download document
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </div>
</div>
`;
